--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "chart.js": "^2.9.4",
     "react-chartjs-2": "^2.11.1",
     "react-router-dom": "^5.2.0",
+    "react-thumbnail": "^1.0.0",
     "react-transition-group": "^4.4.1"
   }
 }
